--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
 		<div class="title-h2">Мы перезвоним через 5 минут!</div>
 		<br />
 		<div class="rf">
-			<form action="" name="form-callback">
+			<form id='formId' action="" name="form-callback">
 				<div class="form-group">
 					<input type="text" name="fio" class="form-control" placeholder="Ваше имя" />
 				</div>
@@ -639,7 +639,7 @@
 				</div>
 				<p><span class="red">*</span> <span class="f12">- поля, обязательные для заполнения</span></p>
 				<div>
-					<input type="submit" class="button btn feedback" value="Отправить" />
+					<input type="submit" class="button btn feedback " value="Отправить" />
 				</div>
 			</form>
 		</div>
